--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Tuğrulcan Elmas</strong>, a PhD student<br />
-					in EPFL<br />
-					I'm working in <a href="http://lsir.epfl.ch/">LSIR</a> and under supervision of Professor Karl Aberer. My topic is Polarization in Social Media. Email: tugrulcan (dot) elmas (at) epfl (dot) ch</h1>
+					<h1><strong>I am Tuğrulcan Elmas</strong>, a PhD student in EPFL
+					I work in <a href="http://lsir.epfl.ch/">LSIR</a>, under supervision of Professor Karl Aberer. </h1>
+					<h2>Email: tugrulcan (dot) elmas (at) epfl (dot) ch</h2>
 				</div>
 			</header>
 
@@ -33,11 +33,12 @@
 						<header class="major">
 							<h2>Welcome to My Boring Homepage.</h2>
 						</header>
-						<p>My name is Tuğrulcan (Tuuruljan) Elmas. Turul<a href="https://en.wikipedia.org/wiki/Turul/"> is a mythical bird. Can means soul. Elmas means "Diamond" in Turkish.</p>
+						<p>My name is Tuğrulcan (Tuuruljan) Elmas. </p>
+						<p><a href="https://en.wikipedia.org/wiki/Turul/">Turul</a>is a mythical bird. "Can" means soul. "Elmas" means "Diamond" in Turkish </p>
 						<p>I am a data scientist wannabe.</p>
 						<p>I work with Twitter data, which are mainly about politics. I analyze polarized users (partisans in layman's terms), trolls, spammers, bots, anyone acting weird.</p>
 						<p>I work with data in the domain of U.S. politics, but I'm also going to work in Swiss politics (regarding NoBillag issue) and now gathering up data regarding Turkish elections in 2018. Drop me an email if you are interested in these themes.</p>
-						<p>I'm teaching assistant of Distributed Information Curse
+						<p>I'm teaching assistant of Distributed Information Course
 						<p>I was born in Bursa, Turkey. I had my bachelors in Bilkent University, Ankara, Turkey. I also spent a semester in National University of Singapore, and two lovely summer internships in Žilinská univerzita v Žiline, Slovakia and Koç University, İstanbul, Turkey. </p>
 						<p>If you are a Turkish speaker, you can read my experiences, advices and travel memories in <a href="https://azimliyazar.blogspot.com/">my blog</a> English content will hopefully come someday.</p>
 						<ul class="actions">
