--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 						<header class="major">
 							<h2>Welcome to My Boring Homepage.</h2>
 						</header>
-						<p>My name is Tuğrulcan (Tuuruljan) Elmas. 
+						<p>My name is Tuğrulcan (Tuuruljan) Elmas. I'm also known as T.j. and Turin.
 						<br><a href="https://en.wikipedia.org/wiki/Turul/">Turul </a>is a mythical bird. "Can" means soul. "Elmas" means "Diamond" in Turkish</p>
 						<!--<p>I am a data scientist wannabe.</p>-->
 						<p>I work with Twitter data, which are mainly about politics. <br>I analyze polarized users (partisans in layman's terms), trolls, spammers, bots, anyone acting weird.
-						<br>I work with data in the domain of U.S. politics, but I'm also going to work in Swiss politics (regarding NoBillag issue) and now gathering up data regarding Turkish elections in 2018. <br>Drop me an email if you are interested in these themes and we can chat.</p>
+						<br>I work with data in the domain of U.S. politics, but I'm also going to work in Swiss politics (regarding NoBillag issue) and now gathering data regarding Turkish elections in 2018. <br>Drop me an email if you are interested in these themes and we can chat.</p>
 						<p>If you are a Turkish speaker, you can read my experiences, advices and travel memories in <a href="https://azimliyazar.blogspot.com/">azimliyazar.blogspot.com</a> <br>English content will hopefully come someday.</p>
 						<p>I was born in Bursa, Turkey. I had my bachelors in Bilkent University, Ankara, Turkey. <br>I also spent a semester in National University of Singapore, and two lovely summer internships in Žilinská univerzita v Žiline, Slovakia and Koç University, İstanbul, Turkey. </p>
 
