--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h2><strong>Hi, I am Tuğrulcan Elmas</strong>, a PhD student in EPFL.</h1>
 					<h1>I work in <a href="http://lsir.epfl.ch/">LSIR</a>, under supervision of Professor Karl Aberer.
-					<br>T.A. in Distributed Information Systems</h2>
+					<br>T.A. in Distributed Information Systems and Applied Data Analysis</h2>
 					<h4>Email: tugrulcan (dot) elmas (at) epfl (dot) ch</h4>
 				</div>
 			</header>
@@ -30,7 +30,7 @@
 			<div id="main">
 
 				<!-- One -->
-					<section id="one">
+					<section id="one", style="color:black;">
 						<header class="major">
 							<h2>Welcome to My Boring Homepage.</h2>
 						</header>
@@ -38,8 +38,8 @@
 						<br><a href="https://en.wikipedia.org/wiki/Turul/">Turul </a>is a mythical bird. "Can" means soul. "Elmas" means "Diamond" in Turkish</p>
 						<!--<p>I am a data scientist wannabe.</p>-->
 						<p>I work with Twitter data, which are mainly about politics. <br>I analyze polarized users (partisans in layman's terms), trolls, spammers, bots, anyone acting weird.
-						<br>I work with data in the domain of U.S. politics, but I'm also going to work in Swiss politics (regarding NoBillag issue) and now gathering data regarding Turkish elections in 2018. <br>Drop me an email if you are interested in these themes and we can chat.</p>
-						<p>If you are a Turkish speaker, you can read my experiences, advices and travel memories in <a href="https://azimliyazar.blogspot.com/">azimliyazar.blogspot.com</a> <br>English content will hopefully come someday.</p>
+						<br>I work with data in the domain of U.S. politics, Swiss politics and Turkish politics. <br>Drop me an email if you are interested in these themes and we can chat.</p>
+						<p>If you are a Turkish speaker, you can read my experiences, advices and travel memories in <a href="https://azimliyazar.blogspot.com/">azimliyazar.blogspot.com</a> English content will hopefully come someday.</p>
 						<p>I was born in Bursa, Turkey. I had my bachelors in Bilkent University, Ankara, Turkey. <br>I also spent a semester in National University of Singapore, and two lovely summer internships in Žilinská univerzita v Žiline, Slovakia and Koç University, İstanbul, Turkey. </p>
 
 						<!--<ul class="actions">
