--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 				<!-- One -->
 					<section id="one", style="color:black;">
-						<header class="major">
+						<header class="major", style="font-weight: bold;">
 							<h2>Welcome to My Boring Homepage.</h2>
 						</header>
 						<p>My name is Tuğrulcan (Tuuruljan) Elmas. I'm also known as T.j. and Turin.
