--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h2><strong>Hi, I am Tuğrulcan Elmas</strong>, a PhD student in EPFL.</h1>
 					<h1>I work in <a href="http://lsir.epfl.ch/">LSIR</a>, under supervision of Professor Karl Aberer.
-					<br>T.A. in Distributed Information Systems and Applied Data Analysis</h2>
+					<br>T.A. in Distributed Information Systems and Introduction à la Programmation</h2>
 					<h4>Email: tugrulcan (dot) elmas (at) epfl (dot) ch</h4>
 				</div>
 			</header>
@@ -35,11 +35,23 @@
 							<h2>Welcome to My Boring Homepage.</h2>
 						</header>
 						<p>My name is Tuğrulcan (Tuuruljan) Elmas. I'm also known as T.j. and Turin.
-						<br><a href="https://en.wikipedia.org/wiki/Turul/">Turul </a>is a mythical bird. "Can" means soul. "Elmas" means "Diamond" in Turkish</p>
+						<br><a href="https://en.wikipedia.org/wiki/Turul/">Turul </a>is a mythical bird. "Can" means soul. "Elmas" means "Diamond" in Turkish.</p>
+
+						<p>My research interests are analyzing polarization, developing methods to reduce polarization, detecting disinformation, stance classification and social media aided journalism.</p>
+
+						<ul>Recent Work
+						<li>Lateral Astroturfing Attacks on Twitter Trending Topics (<a href="https://arxiv.org/abs/1910.07783">arxiv preprint</a>)</li>
+						<li>DORMAN: Database Of Reconstructed MetAbolic Networks (<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8854224">IEEE/ACM Transactions on Computational Biology and Bioinformatics</a>)</li>
+						</ul>
+
+						<ul>Misc
+						<li>President of Turkish Students Association in Switzerland, <a href="https://turquia1912.org">Turquia1912</a> since 2019.</li>
+						<li>Personal blogger in <a href="https://azimliyazar.blogspot.com/">azimliyazar.blogspot.com</a>, 4m pageviews. (Turkish Only)</li>
+						</ul>
+
 						<!--<p>I am a data scientist wannabe.</p>-->
-						<p>I work with Twitter data, which are mainly about politics. <br>I analyze polarized users (partisans in layman's terms), trolls, spammers, bots, anyone acting weird.
-						<br>I work with data in the domain of U.S. politics, Swiss politics and Turkish politics. <br>Drop me an email if you are interested in these themes and we can chat.</p>
-						<p>If you are a Turkish speaker, you can read my experiences, advices and travel memories in <a href="https://azimliyazar.blogspot.com/">azimliyazar.blogspot.com</a> English content will hopefully come someday.</p>
+						<!--<p>I work with Twitter data, which are mainly about politics. <br>I analyze polarized users (partisans in layman's terms), trolls, spammers, bots, anyone acting weird.
+						<br>I work with data in the domain of U.S. politics, Swiss politics and Turkish politics. <br>Drop me an email if you are interested in these themes and we can chat.</p>-->
 						<p>I was born in Bursa, Turkey. I had my bachelors in Bilkent University, Ankara, Turkey. <br>I also spent a semester in National University of Singapore, and two lovely summer internships in Žilinská univerzita v Žiline, Slovakia and Koç University, İstanbul, Turkey. </p>
 
 						<!--<ul class="actions">
