--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<h2>Welcome to My Boring Homepage.</h2>
 						</header>
 						<p>My name is Tuğrulcan (Tuuruljan) Elmas. I'm also known as T.j. and Turin.
-						<br><a href="https://en.wikipedia.org/wiki/Turul/">Turul </a>is a mythical bird. "Can" means soul. "Elmas" means "Diamond" in Turkish.</p>
+						<br><a href="https://en.wikipedia.org/wiki/Turul">Turul </a>is a mythical bird. "Can" means soul. "Elmas" means "Diamond" in Turkish.</p>
 
 						<p>My research interests are analyzing polarization, developing methods to reduce polarization, detecting disinformation, stance classification and social media aided journalism.</p>
 
